# oopcpp

1/: CMakeLists.txt  matrix.h
2/: Doxyfile  Makefile
2/binary_number/: binary.h  binary_methods.cpp
2/dynamic/: dynamic_octets.cpp
2/octet/: octet.cpp  octet.h
2/test/: dynamic_tests.cpp
2/util_functions/: base_converters.h
3/: CMakeLists.txt  README.md  config.h  main.cpp
3/effects/: effect.cpp
3/entities/: entity.h
3/game_features/: map.cpp
3/matrix/: matrix_iterator.h
3/objects/: lair.cpp  lair.h  sprite.cpp  sprite.h  tile.cpp  tile.h  trap.h
3/tests/game_features/: game_tests.cpp  map_tests.cpp
3/tests/objects/: lair_tests.cpp
3/towers/: magic_tower.cpp
3/utility/: closest_enemy.cpp  functions.cpp  path.h  warning.h
lab1/: main.cpp  matrix.h  matrix_input.cpp  matrix_input.h  vector_maker.cpp  vector_maker.h
lab1/matrixtest.dSYM/Contents/: Info.plist
lab1/matrixtest.dSYM/Contents/Resources/DWARF/: matrixtest
lab2/: CMakeLists.txt  Doxyfile  binary.cpp  binary.h  binary_methods.cpp  binary_operators.cpp  main.cpp  octet.cpp  octet.h  utils.cpp  utils.h
lab2/binary_number/: binary.h  binary_methods.cpp  binary_operators.cpp
lab2/dynamic/: dynamic_octets.cpp  dynamic_octets.h
lab2/octet/: octet.cpp  octet.h
lab2/test/: binary_tests.cpp  dynamic_tests.cpp  octet_tests.cpp
lab2/util_functions/: base_converters.cpp  base_converters.h  utils.cpp  utils.h
lab3/: CMakeLists.txt  main.cpp
lab3/effects/: effect.cpp  effect.h
lab3/entities/: entity.cpp  entity.h
lab3/game_features/: game.cpp  game.h  map.cpp  map.h
lab3/matrix/: matrix.h
lab3/objects/: castle.cpp  castle.h  defence.h  lair.cpp  lair.h  placeable.h  sprite.cpp  sprite.h  tile.h  tile_type.h  tower.cpp  tower.h  tower_strategies.h  trap.cpp  trap.h
lab3/tests/entity/: entity_tests.cpp
lab3/tests/game_features/: game_tests.cpp  map_tests.cpp
lab3/tests/objects/: castle_tests.cpp  lair_tests.cpp  tower_tests.cpp  trap_tests.cpp
lab3/tests/utility/: functions_tests.cpp
lab3/towers/: magic_tower.h
lab3/utility/: closest_enemy.h  coords.h  entity_enum.h  functions.cpp  functions.h  warning.cpp  warning.h
lab3/visuals/: design.cpp  design.h
